[package]
name = "mocu_zk_login"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
rand = { version = "0.8.5", features = [] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
jsonwebtoken = "9.2.0"
uuid = { version = "1.7.0", features = ["v4"] }
sha2 = "0.10.8"
bellperson = { version = "0.26.0", default-features = true }
base64 = "0.22.0"
ring = "0.17.8"
signature = "2.2.0"
crc32fast = "1.4.0"
num-bigint = "0.4.4"
blstrs = "0.7.1"
ff = "0.13.0"

sp-core = "31.0.0"
sp-keyring = "34.0.0"
sp-runtime = "34.0.0"
sp-weights = "30.0.0"
substrate-api-client = { version = "0.17.0", default-features = false, features = ["ws-client", "staking-xt", "contracts-xt"] }
subxt = "0.35.0"
subxt-signer = "0.35.0"


#ark-ec = "0.4.2"
#ark-groth16 = "0.4.0"
#ark-ff = "0.4.2"
#ark-relations = "0.4.0"
#ark-serialize = "0.4.2"
#ark-snark = "0.4.0"
#ark-bls12-381 = "0.4.0"